# quant_crypto_trader

./: Mejoras.v2.txt  README.md  pyproject.toml  pyproject.toml.bak  requirements.txt  temp_config.yaml
config/: example_experiment.yaml  experiment_test.yaml
core/data/: base.py  binance_fetcher.py  coinbase_fetcher.py  fetcher_factory.py  models.py
core/features/: run_feature_pipeline.py
core/features/nonlinear/: generate_features.py
core/features/ohlcv/: generate_features.py
core/features/relational/: generate_features.py
core/features/selection/: auto_selector.py
core/features/shared/: utils.py
core/features/shared/output/ETHUSDT_5m/: X_selected.csv  metadata.json
core/features/shared/output/ETHUSDT_5m/ETH/USDT_5m/: X_full.csv  X_selected.csv  metadata.json
core/features/shared/temp/: nonlinear_features.csv  ohlcv_features.csv  relational_features.csv  stats_features.csv
core/features/stats/: generate_features.py
envs/nonlinear/: pyproject.toml.bkp
envs/ohlcv/: pyproject.toml
envs/relational/: pyproject.toml
envs/selection/: pyproject.toml
envs/stats/: pyproject.toml
experiments/: run_experiment.py  test_fetch_data.py
pipeline/: fetch_data.py  run_full_experiment.py
shared/data/ETHUSDT/5m/: 2024-01-01_to_2024-01-01_binance.csv  2024-01-01_to_2024-01-01_coinbase.csv
utils/: config_loader.py  logger.py
