[tool.poetry]
name = "quant-crypto-trader-selection"
version = "0.1.0"
description = "Environment for feature selection module of Quant Crypto Trader"
authors = ["Facu"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.0.0"
numpy = "^1.23.0"
scikit-learn = "^1.3.0"
xgboost = "^1.7.0"
shap = "^0.41.0"
seaborn = "^0.12.0"
matplotlib = "^3.7.0"
pyyaml = "^6.0.2"
rich = "^14.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
